--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tidescurrents",
+  "name": "tidesandcurrents",
   "author": "Sara Pope <sarafpope@gmail.com>",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/tidescurrents-api.esm.js",
