--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "prepare": "tsdx build"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "suncalc": "^1.8.0"
   },
   "devDependencies": {
+    "@types/suncalc": "^1.8.0",
     "husky": "^4.2.5",
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
